<resources>
    <string name="app_name">Talk</string>
    <string name="action_settings">Settings</string>
    <string name="unread">%1$d</string>
    <string name="username">#%1$s</string>
    <string name="error">We are sorry, but there was an error:</string>
    <string name="restart">Press the button below to get back to the home screen.</string>
    <string name="errorTitle">Error:</string>
    <string name="mute">Mute</string>
    <string name="conversation">Conversation</string>
    <string name="leave">Leave and delete conversation</string>
    <string name="type">Type message&#8230;</string>
    <string name="send">Send message</string>
    <string name="profile">Profile image</string>
    <string name="usernameText">Username</string>
    <string name="rename">Rename</string>
    <string name="makeOwner">Make Owner</string>
    <string name="remove">Remove</string>
    <string name="owner">Owner</string>
    <string name="message">Message</string>
    <string name="conversationIcon">Conversation image</string>
    <string name="conversationDelete">Delete conversation</string>
    <string name="messageDelete">Delete message</string>
</resources>
